<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/page1"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:showIn="@layout/activity_main">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/page1Constraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".MainActivity"
        tools:layout_editor_absoluteY="1dp"
        tools:showIn="@layout/activity_main">

        <ScrollView
            android:id="@+id/debugTextScroll"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fadeScrollbars="true"
            android:focusable="false"
            android:saveEnabled="true"
            app:layout_constraintBottom_toTopOf="@id/debugCommand"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/debugText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:gravity="start"
                android:hint="@string/debug_text_hint"
                android:importantForAutofill="no"
                android:inputType="none"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical"
                android:singleLine="false"
                android:textIsSelectable="true"
                android:textSize="@dimen/debugTextSize" />
        </ScrollView>

        <EditText
            android:id="@+id/debugCommand"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:focusedByDefault="true"
            android:fontFamily="monospace"
            android:foreground="@color/colorButtonText"
            android:gravity="center"
            android:hint="@string/debug_command_hint"
            android:importantForAutofill="no"
            android:inputType="none|textNoSuggestions"
            android:nextFocusRight="@id/btDebug"
            android:nextFocusDown="@id/btDebug"
            android:nextFocusForward="@id/btDebug"
            android:singleLine="true"
            android:textSize="@dimen/debugTextSize"
            app:layout_constraintBottom_toTopOf="@id/debugButtons"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/debugTextScroll" />

        <LinearLayout
            android:id="@+id/debugButtons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/btDebug"
                style="@android:style/Widget.Material.Light.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_main"
                android:minHeight="@dimen/btnShortHeight"
                android:nextFocusLeft="@id/debugCommand"
                android:nextFocusRight="@id/btClear"
                android:nextFocusUp="@id/debugCommand"
                android:nextFocusForward="@id/btClear"
                android:onClick="onButtonClick"
                android:text="@string/debug_button_text"
                android:textColor="@android:color/primary_text_light"
                android:textSize="@dimen/btnTextSize" />

            <Button
                android:id="@+id/btClear"
                style="@android:style/Widget.Material.Light.Button.Small"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_main"
                android:minHeight="@dimen/btnShortHeight"
                android:nextFocusLeft="@id/btDebug"
                android:nextFocusRight="@id/btClearAll"
                android:nextFocusUp="@id/debugCommand"
                android:nextFocusForward="@id/btClearAll"
                android:onClick="onButtonClick"
                android:text="@string/clear_button_text"
                android:textColor="@android:color/primary_text_light"
                android:textSize="@dimen/btnTextSize" />

            <Button
                android:id="@+id/btClearAll"
                style="@android:style/Widget.Material.Light.Button.Small"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_main"
                android:minHeight="@dimen/btnShortHeight"
                android:nextFocusLeft="@id/btClear"
                android:nextFocusUp="@id/debugCommand"
                android:onClick="onButtonClick"
                android:text="@string/clear_all_button_text"
                android:textColor="@android:color/primary_text_light"
                android:textSize="@dimen/btnTextSize" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</android.widget.RelativeLayout>
